panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__test_accessing_global_libc_variables.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_accessing_global_libc_variables.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_accessing_global_libc_variables.c"
   (typedef FILE `void`)
   (declaration external stdout~0 `ptr<void>` ∅)
   (declaration external stderr~1 `ptr<void>` ∅)
   (declaration external fprintf~2 `fn(∅: ptr<void>, ∅: ptr<char const>, ...) -> int` ∅)
   (function-definition external
      main~3 `fn() -> int`
      (compound-statement
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<void>, ∅: ptr<char const>, ...) -> int>`
                  (fprintf~2 `fn(∅: ptr<void>, ∅: ptr<char const>, ...) -> int`))
               (stdout~0 `ptr<void>`)
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 8>>`
                        (string `array<char; 8>` "stdout\n\0"))))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<void>, ∅: ptr<char const>, ...) -> int>`
                  (fprintf~2 `fn(∅: ptr<void>, ∅: ptr<char const>, ...) -> int`))
               (stderr~1 `ptr<void>`)
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 8>>`
                        (string `array<char; 8>` "stderr\n\0")))))))))

----- stderr -----
