panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__test_block_comments_2.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_block_comments_2.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_block_comments_2.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition a~2 `int` (42 `int`))
         (return (a~2 `int`)))))

----- stderr -----
