panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__test_compound_statement_in_main.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_compound_statement_in_main.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_compound_statement_in_main.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition a~2 `int` (42 `int`))
         (compound-statement
            (definition a~3 `int` (27 `int`)))
         (return (a~2 `int`)))))

----- stderr -----
