panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__test_print_to_stderr.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_print_to_stderr.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_print_to_stderr.c"
   (typedef ptrdiff_t `long`)
   (typedef size_t `unsigned long`)
   (typedef max_align_t `long long`)
   (typedef wchar_t `int`)
   (typedef nullptr_t `nullptr_t`)
   (declaration external write~0 `fn(∅: int, ∅: ptr<void const>, ∅: unsigned long) -> long` ∅)
   (function-definition external
      main~1 `fn() -> int`
      (compound-statement
         (return
            (truncate `int`
               (call `long`
                  (addressof `ptr<fn(∅: int, ∅: ptr<void const>, ∅: unsigned long) -> long>`
                     (write~0 `fn(∅: int, ∅: ptr<void const>, ∅: unsigned long) -> long`))
                  (2 `int`)
                  (noop-type-conversion `ptr<void const>`
                     (noop-type-conversion `ptr<char>`
                        (addressof `ptr<array<char; 8>>`
                           (string `array<char; 8>` "aaabaaa\0"))))
                  (sign-extend `unsigned long` (7 `int`))))))))

----- stderr -----
