panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__test_return_27.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_return_27.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_return_27.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (return (27 `int`)))))

----- stderr -----
