panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__test_unintialised_local_variables_in_main.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_unintialised_local_variables_in_main.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_unintialised_local_variables_in_main.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition a~2 `int` ∅)
         (definition b~3 `int` (27 `int`))
         (definition c~4 `int` ∅)
         (return (b~3 `int`)))))

----- stderr -----
