panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__test_variable_can_be_initialised_with_variable.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_variable_can_be_initialised_with_variable.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_variable_can_be_initialised_with_variable.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition a~2 `int` (42 `int`))
         (definition b~3 `int` (a~2 `int`))
         (return (b~3 `int`)))))

----- stderr -----
